--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </li>
             </ul>
         </div>
-        <div class="prompt">[<span data-Name>Artem</span>@<span>home</span> ~]$ do it</div>
+        <div class="prompt">[<span data-Name>Artem</span>@<span>home</span> ~]$ Woot woot</div>
 
         <form action="https://duckduckgo.com/" method="GET" autocomplete="off">
             <h1>search:&nbsp;</h1>
