--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <main>
-        <div class="prompt">[<span data-Name>Artem</span>@<span>home</span> ~]$ Welcome</div>
+        <div class="prompt">[<span data-Name>Artem</span>@<span>home</span> ~]$ ls -la</div>
         <div class="tree">
             <h1>.</h1>
             <ul id="list">
@@ -18,7 +18,7 @@
                 </li>
             </ul>
         </div>
-        <div class="prompt">[<span data-Name>Artem</span>@<span>home</span> ~]$ Woot woot</div>
+        <div class="prompt">[<span data-Name>Artem</span>@<span>home</span> ~]$ duckduckgo</div>
 
         <form action="https://duckduckgo.com/" method="GET" autocomplete="off">
             <h1>search:&nbsp;</h1>
