--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <main>
-        <div class="prompt">[<span data-Name>Artem</span>@<span>home</span> ~]$ ls -la</div>
+        <div class="prompt">[<span data-Name>Artemis</span>@<span>gAlAxY</span> ~]$ ls -la</div>
         <div class="tree">
             <h1>.</h1>
             <ul id="list">
@@ -18,9 +18,9 @@
                 </li>
             </ul>
         </div>
-        <div class="prompt">[<span data-Name>Artem</span>@<span>home</span> ~]$ duckduckgo</div>
+        <div class="prompt">[<span data-Name>Artemis</span>@<span>gAlAxY</span> ~]$ McGoogles</div>
 
-        <form action="https://duckduckgo.com/" method="GET" autocomplete="off">
+        <form action="https://google.com/" method="GET" autocomplete="off">
             <h1>search:&nbsp;</h1>
             <textarea type="text" name="q" id="search" wrap="hard" autofocus></textarea>
         </form>
